--- a/paper.tex
+++ b/paper.tex
@@ -312,12 +312,12 @@ Let us summarize all possible cases for $G$ and $\GroupExtension{G}$. Let $$w_n 
 	1
 \end{pmatrix} \in \GL_n\left(\finiteField\right)$$ be the longest Weyl element.
 \begin{enumerate}
-	\item (Even special orthogonal groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = 1$. Denote $\dim_{\finiteField} \hermitianSpace = 2n$. In this case, we have that $G$ consists of all elements $g \in \IsometryGroup\left(\hermitianSpace\right)$ with $\det \hermitianSpace = 1$, and that $\GroupExtension{G}$ consists of all elements $g \in \GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ such that $\det g = \similitudeCharacter\left(g\right)^n$ \calvin{not sure I get what this $\Tilde{G}$ is. I thought it would just be $\widetilde{Isom(V)}$-or maybe its identity component. As it reads it sounds like you are supposed to fix sim and then define $\tilde{G}$.}. There are two cases here.
+	\item (Even special orthogonal groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = 1$. Denote $\dim_{\finiteField} \hermitianSpace = 2n$. In this case, we have that $G$ consists of all elements $g \in \IsometryGroup\left(\hermitianSpace\right)$ with $\det \hermitianSpace = 1$, and that $\GroupExtension{G}$ consists of all elements $g \in \GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ such that $\det g = \similitudeCharacter\left(g\right)^n$ \calvin{not sure I get what this $\Tilde{G}$ is. I thought it would just be $\widetilde{Isom(V)}$-or maybe its identity component. As it reads it sounds like you are supposed to fix sim and then define $\tilde{G}$.} \elad{This is the definition used is Lusztig's paper for example. It is the identity component of $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$. Generally speaking, we have the equality $\det g^2 = \similitudeCharacter\left(g\right)^{2n}$ (you can see this by taking the determinant of both sides). So the identity component is the matrices for which the ``square root'' of this equality holds, i.e. $\det g = \similitudeCharacter\left(g\right)^n$ and not $\det g = -\similitudeCharacter\left(g\right)^n$} There are two cases here.
 	\begin{enumerate}
 		\item Split case: in this case, we can write $\hermitianSpace = \xIsotropic \oplus \yIsotropic$ where $\xIsotropic$ and $\yIsotropic$ are totally isotropic (that is, for every $x \in \xIsotropic$, $\innerproduct{x}{x} = 0$ and similarly for $\yIsotropic$) and these spaces are in duality with respect to $\innerproduct{\cdot}{\cdot}$, i.e., the map $\yIsotropic \to \Hom_{\finiteField}\left(\xIsotropic, \finiteField\right)$ given by $y \mapsto \left(x \mapsto \innerproduct{x}{y}\right)$ is an isomorphism. In this case, we have that $G$ is isomorphic to the subgroup $\SO_{2n}\left(\finiteField\right)$ of $\GL_{2n}\left(\finiteField\right)$ consisting of elements $g$ satisfying $$g \cdot w_{2n} \cdot \transpose{g} = w_{2n}$$ and $\det g = 1$.
 		The group $\GroupExtension{G}$ is isomorphic to the subgroup $\GSO_{2n}\left(\finiteField\right)$ of $\GL_{2n}\left(\finiteField\right)$, consisting of elements $g$ such that $$g \cdot w_{2n} \cdot \transpose{g} = \similitudeCharacter\left(g\right) w_{2n},$$
 		and such that $\det g = \similitudeCharacter\left(g\right)^n$, where $\similitudeCharacter\left(g\right)$ is a non-zero scalar.
-		\item Non-split case: \calvin{do we want to do even characteristic? Not sure what the classification of quadratic forms over even char are} for odd characteristic there is one non-split case when $V = X \oplus \mathbb{E} \oplus Y$ where $\mathbb{E}$ is the unique degree two extension of $\mathbb{F}$ with quadratic form $Nm_{\mathbb{E}:\mathbb{F}}$ \calvin{find someone to cite}
+		\item Non-split case: \calvin{do we want to do even characteristic? Not sure what the classification of quadratic forms over even char are} \elad{Let's not do characteristic two} for odd characteristic there is one non-split case when $V = X \oplus \mathbb{E} \oplus Y$ where $\mathbb{E}$ is the unique degree two extension of $\mathbb{F}$ with quadratic form $Nm_{\mathbb{E}:\mathbb{F}}$ \calvin{find someone to cite}
 	\end{enumerate}
 	\item (Symplectic groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = -1$. In this case, $\dim_{\finiteField} \hermitianSpace = 2n$ for some positive integer $n$ and $G$ is isomorphic to subgroup $\Sp_{2n}\left(\finiteField\right)$ of $\GL_{2n}\left(\finiteField\right)$ consisting of all elements $g$ satisfying $$g \cdot \begin{pmatrix}
 		& w_n\\
