Trying to prove that the function after intertwining operator vanishes outside of the parabolic

--- a/references.bib
+++ b/references.bib
@@ -765,4 +765,17 @@
   pages      = {ix+394},
 }
 
+@Book{Chang1997,
+  author    = {Chang, Jun},
+  publisher = {ProQuest LLC, Ann Arbor, MI},
+  title     = {Zeta functions attached to irreducible representations of classical groups over finite fields},
+  year      = {1997},
+  isbn      = {978-0591-35463-8},
+  note      = {Thesis (Ph.D.)--Clark University},
+  mrclass   = {99-05},
+  mrnumber  = {2695599},
+  pages     = {96},
+  url       = {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:9726513},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
