--- a/paper.tex
+++ b/paper.tex
@@ -114,6 +114,7 @@
 \newcommand{\UnipotentRadical}{N}
 \newcommand{\ParabolicSubgroup}{P}
 \newcommand{\GroupExtension}[1]{\widetilde{#1}}
+\newcommand{\Center}{\mathrm{Z}}
 
 % Finite field macros
 \newcommand{\FieldNorm}[2]{\mathrm{N}_{#1:#2}}
@@ -354,7 +355,9 @@ We call $\dblJacobiSumScalar{\pi}{\chi}$ the \emph{doubling method Jacobi sum}.
 Our next goal is to understand how the doubling method Jacobi sum behaves under parabolic induction.
 
 Let $\xIsotropic$ and $\yIsotropic$ be isotropic spaces of $\hermitianSpace$ of dimension $k$, such that $\xIsotropic$ and $\yIsotropic$ are in duality with respect to form $\innerproduct{\cdot}{\cdot}$. Let us write $$\hermitianSpace = \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic,$$
-where $\hermitianSpace' \subset \hermitianSpace$ is a non-degenerate subspace, orthogonal to $\xIsotropic$ and $\yIsotropic$. Let $P$ be the parabolic subgroup of $H$, consisting of all elements stabilizing the flag $$0 \subset \xIsotropic \subset \xIsotropic \oplus \hermitianSpace' \subset \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic = \hermitianSpace.$$
+where $\hermitianSpace' \subset \hermitianSpace$ is a non-degenerate subspace, orthogonal to $\xIsotropic$ and $\yIsotropic$. Let $P = P_{H}\left(\mathcal{F}\right)$ be the parabolic subgroup of $H$, consisting of all elements stabilizing the flag \begin{equation}\label{eq:definition-of-flag-for-parabolic-subgroup}
+	\mathcal{F} \colon 0 \subset \xIsotropic \subset \xIsotropic \oplus \hermitianSpace' \subset \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic = \hermitianSpace.
+\end{equation}
 Let $G' = \IsometryGroup\left(\hermitianSpace'\right)$. Write $P = L \ltimes N$, where $L$ is the Levi part of $P$ and $N$ is the unipotent radical of $P$. Then $L$ is isomorphic to $H' \times \GL_k\left(\quadraticExtension\right)$, where $H' \in \left\{G',\GroupExtension{G'}\right\}$ is of the same type as $H$. 
 
 Let $\fieldCharacter_{\quadraticExtension} \colon \quadraticExtension \to \multiplicativegroup{\cComplex}$ be the character  $\fieldCharacter_{\quadraticExtension} = \fieldCharacter \circ \trace_{\quadraticExtension \slash \finiteField}$. Similarly, for any $k \ge 1$, let $\fieldCharacter_{\quadraticFieldExtension{k}} \colon \quadraticFieldExtension{k} \to \multiplicativegroup{\cComplex}$ be the character $\fieldCharacter_{\quadraticFieldExtension{k}} = \fieldCharacter \circ \trace_{\quadraticFieldExtension{k} \slash \finiteField}$.
@@ -375,21 +378,27 @@ $$\minusInvolution{\chi}\left(x\right) = \chi^{-1}\left(\involution{x}\right).$$
 	$$\left(\dblJacobiSum{\rho}{\chi} f\right)\left(x\right) = \frac{1}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{p \in P}  \Phi_{\chi}\left(x^{-1} p\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) v_\tau \otimes v_{\pi'}.$$
 	As before, we may write
 	$$\Phi_{\chi}\left(g\right) = q^{-k^2} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic \left(-h\right)\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(g - \idmap_{\hermitianSpace} - h\right)\right)\right).$$
-	Hence, \begin{align*}
-		\chi\left(-1\right)^k q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace\left(Ah\right)\right) \\
-		& \times \sum_{p \in P} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(xp - \idmap_{\hermitianSpace}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
-	\end{align*}
+	Hence, \begin{equation}
+		\begin{split}\label{eq:gamma-factor-multiplicativity-support-expression}
+			& \chi\left(-1\right)^k q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(x^{-1} p\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) \\
+			= & \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace\left(Ah\right)\right) \sum_{p \in P} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1}p - \idmap_{\hermitianSpace}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
+		\end{split}
+	\end{equation}
 	Assume that $\chi \ne 1$. By \Cref{lem:sum-vanishes-for-singular-matrices}, we can reduce the sum to $A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)$. Let us replace $h$ with $A^{-1} h$. We get the sum
 	\begin{align*}
-		\sum_{A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi^{-1}\left(\detQuadratic A\right) \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace h\right) \sum_{p \in P} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(xp - \idmap_{\hermitianSpace}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
+		\sum_{A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi^{-1}\left(\detQuadratic A\right) \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace h\right) \sum_{p \in P} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1} p - \idmap_{\hermitianSpace}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
 	\end{align*}
-	Consider the inner sum over $P$, written as $$\sum_{l \in L} \sum_{u \in N} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A x l u\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(l\right).$$
-	The inner sum over $N$ will vanish unless $Ax \in P$. Thus we have
+	Replace the sum over $p \in P$ by a sum over $l \in L$ and $u \in N$ where $p = lu$ and change variables $u \mapsto u^{-1}$ and $A \mapsto A u$. We arrive at the sum
 	\begin{align*}
-		\chi\left(-1\right)^k q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)}  \chi\left(\detQuadratic\left(xh\right)\right) \fieldCharacter_{\quadraticExtension}\left(\trace h\right) \\
-		& \times \sum_{p' \in P} \sum_{p \in P} \chi^{-1}\left(\detQuadratic p'\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(p' \left(p - x^{-1}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
+		\sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace h\right) \sum_{A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi^{-1}\left(\detQuadratic A\right) \sum_{l \in L} \sum_{u \in U} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1} l - u\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(l\right).
 	\end{align*}
-	By decomposing the sum over $p' \in P$ into a sum over $N$ and $L$, we see that the inner sum over $N$ will vanish unless $p - x^{-1} \in P$, which implies that $x \in P \cap G$.
+	Using the appendix, we arrive at the sum
+	\eqref{eq:gamma-factor-multiplicativity-support-expression} is given by
+	\begin{align*}
+		& \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)}  \chi\left(\detQuadratic\left(xh\right)\right) \fieldCharacter_{\quadraticExtension}\left(\trace h\right) \\
+		& \times \sum_{A \in P_{\GL_{\quadraticExtension}\left(\mathcal{F}\right)}} \sum_{p \in P} \chi^{-1}\left(\detQuadratic A\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1} p - \idmap_{\hermitianSpace} \right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right),
+	\end{align*}
+	Where $P_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)$ is the parabolic subgroup of $\GL_{\quadraticExtension}\left(\hermitianSpace\right)$ stabilizing the flag $\mathcal{F}$ from \eqref{eq:definition-of-flag-for-parabolic-subgroup}. By decomposing the sum over $A$ into a sum over its Levi part and its unipotent radical, we see that the inner sum over the unipotent radical will vanish unless $x^{-1} p - \idmap_{\hermitianSpace}$ is an upper triangular matrix, which implies that $x \in P \cap G$.
 	
 	Hence, we have that $\dblJacobiSum{\rho}{\chi} f$ is supported on $P$. We move to compute $\left(\dblJacobiSum{\rho}{\chi} f\right)\left(\idmap_{\hermitianSpace}\right)$. It is given by
 	\begin{equation}\label{eq:recursive-doubling-gauss-sum}
@@ -409,6 +418,9 @@ $$\minusInvolution{\chi}\left(x\right) = \chi^{-1}\left(\involution{x}\right).$$
 	\end{align*}
 	The result now follows.
 \end{proof}
+\begin{remark}
+	A proof similar to the second part of our proof is given in \cite{Chang1997}. However, the proof in \cite{Chang1997} only works if the parabolically induced representation is irreducible.
+\end{remark}
 
 \subsubsection{Gamma factors}
 In order to make the computations more tolerable, it is beneficial to work with fully multiplicative functions. We introduce the doubling method gamma factors.
@@ -927,6 +939,60 @@ $$\sum_{\substack{\xi_1,\dots,\xi_k \in \multiplicativegroup{\finiteFieldExtensi
 \prod_{j=1}^k \xi_j^{1-q^m} = \left(-1\right)^k t^{-1}}} \left(\prod_{j=1}^k \chi_j^{-1}\left(\FieldNorm{2m}{1}\left(\xi_j \right)\right)\right) \fieldCharacter_{2m}\left(\sum_{j=1}^k \xi_j\right).$$
 
 \appendix
+\section{Unipotent averaging}
+
+Choose bases $e_1,\dots,e_k$ for $\xIsotropic$ and $f_1,\dots,f_k$ for $\yIsotropic$ that are dual, i.e., $\innerproduct{e_i}{f_j} = \delta_{ij}$, where $\delta_{ij}$ is Kronecker's delta function, and choose a basis $v'_1, \dots, v'_{r}$ for $\hermitianSpace'$. Then with respect to the basis $e_1,\dots,e_k,v_1',\dots,v_r',f_k,f_{k-1},\dots,f_1$, elements in $N$ can be represented in matrix form $$\begin{pmatrix}
+	\IdentityMatrix{k} & X & Z\\
+	& \IdentityMatrix{r} & Y\\
+	& & \IdentityMatrix{k}
+\end{pmatrix},$$
+where $X,Y$ and $Z$ are matrices satisfying certain relations. Under this realization, the center $\Center\left(N\right)$ of $N$ corresponds to matrices of the form \begin{equation}\label{eq:center-matrix-representation}
+	\begin{pmatrix}
+		\IdentityMatrix{k} & 0 & Z\\
+		& \IdentityMatrix{r} & 0\\
+		& & \IdentityMatrix{k}
+	\end{pmatrix},
+\end{equation}
+where $Z$ is a certain type of matrix: it is ``-$\epsilon$ symmetric'', that is, it satisfies $$Z = -\epsilon w_k \involution{\left(\transpose{Z}\right)} w_k,$$
+where $$w_k = \begin{pmatrix}
+	& & & 1\\
+	& & 1\\
+	& \iddots\\
+	1
+\end{pmatrix} \in \GL_k\left(\finiteField\right)$$ is the long Weyl element.
+
+The following sum appears as an inner sum in \eqref{TODO}:
+\begin{equation}\label{eq:sum-that-vanishes-unless-A-is-upper-triangular}
+	\sum_{u \in N} \fieldCharacter_{\quadraticExtension}\left(\trace\left(-Au\right)\right) = \sum_{u \in N \slash \Center\left(N\right)} \fieldCharacter_{\quadraticExtension}\left(\trace\left(-Au\right)\right) \sum_{z \in \Center\left(N\right)} \fieldCharacter_{\quadraticExtension}\left(\trace\left(-Az\right)\right).
+\end{equation}
+Consider the inner sum 
+\begin{equation*}
+	\sum_{u \in Z\left(N\right)} \fieldCharacter_{\quadraticExtension}\left(\trace\left(-Az\right)\right).
+\end{equation*}
+This sum vanishes unless the matrix representation of $A$ is of the form $$\begin{pmatrix}
+	a_{k \times k} & a'_{k \times r} & a''_{k \times k} \\
+	b_{r \times k} & b'_{r \times r} & b''_{r \times k}\\
+	c_{k \times k} & c'_{k \times r} & c''_{k \times k}
+\end{pmatrix},$$
+where $c_{k \times k}$ is ``$\epsilon$-symmetric'', that is, it satisfies \begin{equation}\label{eq:epsilon-symmetric-relation}
+	c_{k \times k} = \epsilon w_k \involution{\left(\transpose{c_{k \times k}}\right)} w_k.
+\end{equation}
+Let us denote by $R$ the subset of $\EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)$ consisting of elements such that their matrix representation satisfies the relation \eqref{eq:epsilon-symmetric-relation}.
+Then we may replace the sum
+$$\sum_{A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi^{-1}\left(\detQuadratic A\right) \sum_{u \in N} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1} l - u\right)\right)\right)$$ with 
+$$\sizeof{\Center\left(N\right)} \sum_{A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right) \cap R} \chi^{-1}\left(\detQuadratic A\right) \sum_{u \in N \slash \Center\left(N\right)} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(x^{-1} l - u\right)\right)\right).$$
+Let $N_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)$ be the unipotent radical of the parabolic subgroup $P_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)$ of $\GL_{\quadraticExtension}\left(\hermitianSpace\right)$ stabilizing the flag $\mathcal{F}$. Its center $\Center\left(N_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)\right)$ consists of linear maps whose matrix representation is of the form \eqref{eq:center-matrix-representation}, where $Z$ is an arbitrary matrix.
+
+We notice the following observation: if $A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right) \cap R$, then for any $z \in \Center\left(N_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)\right)$, we have $zA \in \GL_{\quadraticExtension}\left(\hermitianSpace\right) \cap R$. This is because the left action of $\Center\left(N_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)\right)$ does not change the last $k$ rows of $A$. It follows that $\GL_{\quadraticExtension}\left(\hermitianSpace\right) \cap R$ is a union of left (or right) cosets of $\Center\left(N_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)\right)$.
+
+
+
+
+$P_{\GL_{\quadraticExtension}\left(\hermitianSpace\right)}\left(\mathcal{F}\right)$ is the parabolic subgroup of $\GL_{\quadraticExtension}\left(\hermitianSpace\right)$ that stabilizes the flag $\mathcal{F}$ from \eqref{eq:definition-of-flag-for-parabolic-subgroup}.
+
+
+
+
 \section{Evaluation of norm one exponential sums}
 
 In this appendix, we evaluate several exponential sums.
