--- a/paper.tex
+++ b/paper.tex
@@ -201,7 +201,9 @@
 	\item The proof of \Cref{prop:gamma-factor-is-constant-on-lusztig-series} should be modified. We should first use $\GroupExtension{G}$. For this group we have the ``at most one cuspidal'' property. Then we should use \cite[Page 140]{DigneMichel2020} $$R_{\GroupExtension{T}}^{\GroupExtension{G}}\left(\tilde{\theta}\right) \restriction_{G} = R_{T}^G \left(\tilde{\theta}\restriction_{T}\right),$$
 	where we need to explain the notation.
 	\item \Cref{subsec:tori-isomorphism} and \Cref{subsec:gauss-sums-attached-to-semi-simple} should be removed and replaced with Calvin's arguments.
+    \item Find what the root data + F action for the non-split quadratic form is. Find the dual gorup and add the appropriate representation to \Cref{lem:indep_geo_conj}
     \item We might be able to include $SO_{odd}$ with $\Phi(g)$ the symmetric function in the eigenvalues of $g$ given by $\sum_{i=1}^{dim(V)} \chi(\Pi_{j \neq i}(\lambda_j-1))$.
+    
 \end{enumerate}
 
 \section{Notation}
@@ -636,7 +638,7 @@ for large enough $n$, where $\aFieldNorm_{\algebraicGroup{T}(\finiteFieldExtensi
 \calvin{todo:type in some motivation for class functions whose product doesn't depend on geometric conjugacy, gamma functions whatever}.
 
 \begin{definition}
-	A \emph{stable function} on $\algebraicGroup{G}(\finiteField)$ is a class function $f$ such that $\sum_{g \in G} f(g)(g)$ is a scalar which only depends on the Lusztig packet for $\pi$. \calvin{FUNCTORIAL TRANSFER FOR REDUCTIVE GROUPS AND CENTRAL
+	A \emph{stable function} on $\algebraicGroup{G}(\finiteField)$ is a class function $f$ such that $\sum_{g \in G} f(g)\pi(g)$ is a scalar which only depends on the Lusztig packet for $\pi$. \calvin{FUNCTORIAL TRANSFER FOR REDUCTIVE GROUPS AND CENTRAL
 COMPLEXES has this definition}
 \end{definition}
 
@@ -661,14 +663,13 @@ The main result of this paper is
 	$\Phi_{\chi}(g)$ is a stable function. In other words $\dblVirtualJacobiSumScalar{\pi}{\chi}$ only depends on the Lusztig packet of $\pi$.
 	%Equivalently	$\frac{\dblVirtualJacobiSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)}$ only depends on the geometric conjugacy class of $(T,\theta)$.
 \end{theorem}
-
+In the $\GL_n$ case this follows from \Cref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} along with \calvin{Hasse-Davenport? Something else?}.
 In this section we prove a slightly weaker result:
+
 \begin{lemma}
 \label{lem:indep_geo_conj}
     $\frac{\dblVirtualJacobiSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)}$ only depends on the geometric conjugacy class of $(T,\theta)$.
 \end{lemma}
-
-In the $\GL_n$ case this follows from \Cref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} along with \calvin{Hasse-Davenport? Something else?}.
 
 
 For a torus theta pair $(T,\theta)$ with associated Frobenius conjugacy classes $w \in W(\algebraicGroup{T})$ and $(s) \subset G^*$ and an embedding $\rho:G^* \to \GL_n$.  Fix a Frobenius stable maximal torus $\algebraicGroup{T}^* \subset G^*$ and a Frobenius stable maximal torus $\algebraicGroup{T} \subset \GL_n$ which contains $\rho(\algebraicGroup{T}^*)$. Let $\tilde{T}$ be the torus of $\GL_n$ corresponding to the Frobenius conjugacy class of $\rho(w) \in W(\algebraicGroup{T})$ and $\tilde{\theta}$ such that $(\rho(s)) = (s_{\tilde{T},\tilde{\theta}})$. Define
@@ -808,13 +809,13 @@ The goal of this section is to use \Cref{thm:computation-of-doubling-gauss-sum-s
 
 \calvin{start alternate writeup of section 3.4/3.4.1:}
 \subsection{Computation for Lusztig Series}
-The goal of this section is to prove \Cref{thm:Phi_stable} in particular that if $c_{\pi}$ is nonzero in the virtual representation $R_T(\theta) = \sum c_{\pi} \pi$ then
+The goal of this section is to prove \Cref{thm:Phi_stable} in particular:
 \begin{theorem}
-\label{thm:doubling-method-gamma-factor-for-deligne-lusztig}
+\label{thm:doubling-method-gamma-factor-for-deligne-lusztig} If $c_{\pi}$ is nonzero in the virtual representation $R_T(\theta) = \sum c_{\pi} \pi$ then
 $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g_T\left(\theta, \fieldCharacter\right)$$
 \end{theorem}
 \calvin{add in $\chi$} the right hand side of which we showed in \Cref{lem:indep_geo_conj} only depends on the geometric conjugacy class of $(T,\theta)$ hence on the Lusztig series $\LusztigSeries{G}{s}$ which contains $\pi$.
-\subsubsection{Proof of \Cref{thm:Phi_stable}}
+\subsubsection{Proof of \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig}, \Cref{thm:Phi_stable}}
 Our proof will be via induction on $\dim_{\quadraticExtension} \hermitianSpace$. First we will use \Cref{thm:multiplicativity-in-terms-of-gamma-factors}  and MULTIPLICAATIVITY-OF-GTTHETA to prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for any non cuspidal $\pi$ assuming \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for all Levi factors. \\
 
 \begin{proof}
@@ -846,6 +847,66 @@ While our groups $G$ may not have connected center, the function $\Phi(g)$ exten
 So all the cuspidal $\pi$ in a Lusztig packet $\LusztigSeries{G}{s}$ are irreducible pieces in the restriction from $\GroupExtension{G}$ to $G$ of a single cuspidal representation $\tilde{\pi}$ of $\GroupExtension{G}$.
 
 \calvin{end alternate writeup}
+\calvin{start alternate writeup 2 of section 3.4/3.4.1}
+\subsection{Computation for Lusztig Series}
+The goal of this section is to prove \Cref{thm:Phi_stable} in particular:
+\begin{theorem}
+\label{thm:doubling-method-gamma-factor-for-deligne-lusztig} If $c_{\pi}$ is nonzero in the virtual representation $R_T(\theta) = \sum c_{\pi} \pi$ then
+$$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g_T\left(\theta, \fieldCharacter\right)$$
+\end{theorem}
+\calvin{add in $\chi$} the right hand side of which we showed in \Cref{lem:indep_geo_conj} only depends on the geometric conjugacy class of $(T,\theta)$ hence on the Lusztig series $\LusztigSeries{G}{s}$ which contains $\pi$.
+\subsubsection{Proof of \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig}, \Cref{thm:Phi_stable}}
+We instead prove a version of \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for the extension $\GroupExtension{G}$ (see section 3.2) of $G$:
+\begin{theorem}
+\label{thm:doubling-method-gamma-factor-for-deligne-lusztig-extensions} Extend $\Phi_{\chi}$ by zero to $\GroupExtension{G}$. If $c_{\pi}$ is nonzero in the virtual representation $R_{T}(\theta) = \sum c_{\pi} \pi$ of $\GroupExtension{G}$ then
+$$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g_{T \cap G}\left(\theta|_{T \cap G}, \fieldCharacter\right)$$
+where the doubling factor is defined by
+\[
+\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} := \omega_{\pi}(-1)\frac{\sum_{g \in \GroupExtension{G}}\pi(g)\Phi_{\chi}(g)}{\sqrt{|g|}c_V(\chi,\pi)}
+\]
+\end{theorem}
+Any irreducible representation $\pi$ of $G$ which is the a component of an irreducible representation $\tilde{\pi}$ of $\GroupExtension{G}$ restricted to $\pi$,
+\[
+    \dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \dblGammaFactorSpace{\hermitianSpace}{\tilde{\pi}}{\chi}{\fieldCharacter}.
+\]
+
+The following proposition implies that if $\pi \in \LusztigSeries{\FrobeniusFixedPoints{G}}{s}$ then there exists $\tilde{\pi} \in \LusztigSeries{\FrobeniusFixedPoints{G}}{\tilde{s}}$ for $\tilde{s}$ only dependeing on $s$. Thus \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} follows from \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig-extensions}. 
+
+\begin{proposition}[{\cite[Proposition 11.7]{Bonnafe2006}}]
+	Let $\tilde{s}$ be a semisimple element of $\DualFrobeniusFixedPoints{\GroupExtension{G}}$ and let $s = i^{\ast}\left(\tilde{s}\right)$. Then
+	\begin{enumerate}
+		\item If $\tilde{\pi} \in \LusztigSeries{\FrobeniusFixedPoints{\GroupExtension{G}}}{\tilde{s}}$ and if $\pi$ is an irreducible subrepresentation of the restriction of $\tilde{\pi}$ to $\FrobeniusFixedPoints{G}$, then $\pi \in \LusztigSeries{\FrobeniusFixedPoints{G}}{s}$.
+		\item Let $\pi \in \LusztigSeries{\FrobeniusFixedPoints{G}}{s}$. Then there exists $\tilde{\pi} \in \LusztigSeries{\FrobeniusFixedPoints{\GroupExtension{G}}}{\tilde{s}}$ such that $\pi$ is an irreducible subrepresentation of the restriction of $\tilde{\pi}$ to $\FrobeniusFixedPoints{G}$.
+	\end{enumerate}
+\end{proposition}
+
+
+Our proof will be via induction on $\dim_{\quadraticExtension} \hermitianSpace$. First we will use \Cref{thm:multiplicativity-in-terms-of-gamma-factors}  and MULTIPLICAATIVITY-OF-GTTHETA to prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig-extensions} for any non cuspidal $\pi$ assuming \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig-extensions} for all Levi factors. \\
+
+\begin{proof}
+\calvin{should be short proof. Might not even need to put--just need to say both are multiplicative}
+\end{proof}
+
+
+By \Cref{lem:indep_geo_conj}, we know that for $R_T(\theta) = \sum c_{\pi} \pi$, 
+$$\sum c_{\pi} \dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = (\sum c_{\pi})g_{T \cap G}\left(\theta|_{T \cap G}, \fieldCharacter\right)$$
+is independent of geometric conjugacy class of $(T \cap G,\theta|_{T \cap G})$ he. Since we know the relevant equality for non cupsidal $\pi$, we get that
+$$ \sum_{\pi \textnormal{ cuspidal}} c_{\pi} \dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \left(\sum_{\pi \textnormal{ cuspidal}} c_{\pi}\right)g_{T \cap G}\left(\theta|_{T \cap G}, \fieldCharacter\right)$$.
+
+But in fact there is only one cuspidal $\pi$, hence the above equation determines 
+\begin{proposition}[{\cite[Page 172]{Lusztig1977}}]
+	Let $\GroupExtension{G}$ have connected center. For any semisimple element $s \in \DualFrobeniusFixedPoints{\GroupExtension{G}}$, the Lusztig series $\LusztigSeries{\FrobeniusFixedPoints{\GroupExtension{G}}}{s}$ contains at most one cuspidal element.
+\end{proposition}
+
+While our groups $G$ may not have connected center, the function $\Phi(g)$ extends by zero to a class function on $\tilde{G}$ (see section 3.2) which does have connected center. Hence if a representation $\pi$ of $\tilde{G}$ deposes intorepresentations $\pi_1 \oplus \pi_2 \hdots \oplus \pi_r$ of $G$, $\dblGammaFactorSpace{\hermitianSpace}{\pi_1}{\chi}{\fieldCharacter} = \dblGammaFactorSpace{\hermitianSpace}{\pi_2}{\chi}{\fieldCharacter} =\hdots =\dblGammaFactorSpace{\hermitianSpace}{\pi_r}{\chi}{\fieldCharacter}$.
+
+
+\calvin{maybe say that cuspidal breaks into cuspidal pieces}
+So all the cuspidal $\pi$ in a Lusztig packet $\LusztigSeries{G}{s}$ are irreducible pieces in the restriction from $\GroupExtension{G}$ to $G$ of a single cuspidal representation $\tilde{\pi}$ of $\GroupExtension{G}$.
+
+\calvin{end alternate writeup 2}
+
+
 \subsubsection{Proof of the main result \calvin{\Cref{thm:Phi_stable}}}
 
 \elad{Merge with Calvin's stuff}
